--- a/index.html
+++ b/index.html
@@ -28,48 +28,48 @@
       <div class="links">
 
         <a href="https://docs.google.com/spreadsheets/d/1CUl356E7qgsiMNAjo39zqupBJMfZhi2SueE544uHEFc/edit?usp=sharing">
-          <div class="icon" id="schedule">
+          <div class="icon-update" id="schedule">
             <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
             <span>Schedule</span>
           </div>
         </a>
         <a href="https://www.google.com/calendar/render?pli=1#h">
-          <div class="icon" id="calendar">
+          <div class="icon-update" id="calendar">
             <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
             <span>Calendar</span>
           </div>
         </a>
         <a href="https://mail.google.com/mail/u/0/#inbox">
-          <div class="icon" id="gmail">
+          <div class="icon-update" id="gmail">
             <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
             <span>Gmail</span>
           </div>
         </a>
         <a href="https://drive.google.com/drive/#my-drive">
-          <div class="icon" id="drive">
+          <div class="icon-update" id="drive">
             <img src="images/googledrive.ico" alt="">
             <span>Google Drive</span>
           </div>
         </a>
         <a href="https://www.champlain.edu/current-students">
-          <div class="icon" id="drive">
+          <div class="icon-update" id="drive">
             <img src="images/shield_white.png" alt=""> <br>
             <span style="font-size: 18px;">Current Students</span>
           </div>
         </a>
         <a href="https://my.champlain.edu/google/index/off/1/service/workday">
-          <div class="icon" id="workday">
+          <div class="icon-update" id="workday">
             <img src="images/workday.png" alt=""> <br>
             <span>Workday</span>
           </div>
         <a href="pages/feedback.html">
-          <div class="icon" id="feedback">
+          <div class="icon-update" id="feedback">
             <img src="images/feedback.png" alt=""> <br>
             <span>Office Feedback</span>
           </div>
         </a>
         <a href="https://champlainadmissions.slack.com/">
-          <div class="icon" id="Slack">
+          <div class="icon-update" id="Slack">
             <img src="images/slack.png" alt=""> <br>
             <span style="font-size: 20px;">Slack</span>
           </div>
