--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
       <div class="links">
 
         <a href="https://docs.google.com/spreadsheets/d/1CUl356E7qgsiMNAjo39zqupBJMfZhi2SueE544uHEFc/edit?usp=sharing">
-          <div class="icon-update" id="schedule">
+          <div class="icon" id="schedule">
             <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
             <span>Schedule</span>
           </div>
         </a>
         <a href="https://www.google.com/calendar/render?pli=1#h">
-          <div class="icon-update" id="calendar">
+          <div class="icon" id="calendar">
             <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
             <span>Calendar</span>
           </div>
         </a>
         <a href="https://mail.google.com/mail/u/0/#inbox">
-          <div class="icon-update" id="gmail">
+          <div class="icon" id="gmail">
             <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
             <span>Gmail</span>
           </div>
         </a>
         <a href="https://drive.google.com/drive/#my-drive">
-          <div class="icon-update" id="drive">
+          <div class="icon" id="drive">
             <img src="images/googledrive.ico" alt="">
             <span>Google Drive</span>
           </div>
