--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
   </head>
   <body>
     
+    <!--Navigation bar!-->
+    <nav>
+      <!-- <img src="logo_color.png" alt="" /> -->
+      <a id="logo-wrapper" href="index.html">
+        <img src="../images/full.png" alt="">
+        <span>Student Ambassadors</span>
+      </a>
+
+      <div class="pages">
+        <a href="../index.html"><li>Home</li></a>
+        <a href="./calendar.html"><li>Tour Schedule</li></a>
+        <a href="./extensions.html"><li>Extensions</li></a>
+        <a href="./phonelist.html"><li>SA Phone List</li></a>
+        <a href="./counselormap.html"><li>Counselor Map</li></a>
+      </div>
+    </nav>
 
       <ul class="links">
 
