--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="pages">
         <a href="../index.html"><li>Home</li></a>
-        <a href="./phonelist.html"><li>SA Phone List</li></a>
+        <a href="./pages/phonelist.html"><li>SA Phone List</li></a>
       </div>
     </nav>
 
